# ak_hrrr_to_zarr

./: .gitignore  .pre-commit-config.yaml  ALASKA_HRRR_METADATA_SUMMARY.md  CONTRIBUTING.md  DATA_STORAGE.md  LICENSE  README.md  alaska_hrrr_metadata.json  hrrr.t00z.wrfsfcf00.ak.grib2.5b7b6.idx  pyproject.toml  test_coordinates.py
.github/workflows/: cleanup-repo.yml  update-data.yml
catalog/: catalog.json  index.html
data/hrrr_alaska_20251114_05.zarr/: .zmetadata
data/hrrr_alaska_20251114_05.zarr/cfrzr/: 0.2.1.1  0.2.2.1  1.0.5.2  1.0.7.3  1.1.0.0  1.1.2.2  1.2.1.2  1.2.2.2  1.2.4.2  2.0.1.0  2.0.1.3  2.0.2.1  2.0.5.0  2.0.6.3  2.1.1.2  2.1.1.3  2.1.4.1  2.1.5.2  2.1.7.3  2.2.2.3
data/hrrr_alaska_20251114_05.zarr/cicep/: 0.0.1.0  0.0.3.2  0.0.5.3  0.1.1.0  0.1.5.2  0.1.7.3  0.2.0.2  0.2.3.0  1.0.0.1  1.0.2.1  1.0.3.0  1.0.4.0  1.0.4.1  1.2.3.1  1.2.4.1  2.0.6.3  2.1.0.1  2.1.0.2  2.1.4.1  2.1.5.0  2.1.6.2  2.2.0.3
data/hrrr_alaska_20251114_05.zarr/crain/: 0.0.2.0  0.0.2.1  0.0.3.0  0.0.5.2  0.0.7.0  0.1.5.1  0.2.4.1  0.2.6.0  1.0.5.3  1.1.1.0  1.1.1.1  1.1.3.1  1.1.4.1  1.1.5.2  1.1.5.3  1.1.6.3  2.0.4.0  2.0.6.0  2.0.6.3  2.1.3.0  2.1.6.0  2.2.3.1  2.2.4.2
data/hrrr_alaska_20251114_05.zarr/csnow/: 0.0.2.2  0.0.4.3  0.0.5.0  0.0.6.2  0.0.7.2  0.1.4.0  0.1.6.3  0.2.2.2  0.2.3.1  1.0.2.1  1.0.5.3  1.1.1.1  1.2.1.2  1.2.3.2  2.0.1.1  2.0.1.3  2.1.0.2  2.1.2.2  2.1.4.1  2.1.5.3  2.2.0.1  2.2.2.3  2.2.3.3
data/hrrr_alaska_20251114_05.zarr/dlwrf/: 0.0.0.2  0.0.2.1  0.0.2.2  0.0.4.1  0.0.4.2  0.1.0.2  0.1.4.3  0.1.5.1  0.2.2.1  0.2.3.1  0.2.4.3  0.2.6.2  0.2.7.3  1.0.0.0  1.0.0.1  1.0.5.0  1.0.6.3  1.0.7.0  1.1.0.3  1.1.1.2  1.1.4.0  1.1.7.1  1.2.2.0  1.2.2.2  2.0.3.2  2.1.2.3  2.1.4.1  2.1.7.2  2.2.2.3  2.2.4.2  2.2.5.1  2.2.7.1
data/hrrr_alaska_20251114_05.zarr/dswrf/: .zarray  .zattrs  0.1.3.1  0.1.3.2  0.1.3.3  0.1.6.0  0.2.2.2  0.2.4.3  0.2.6.3  0.2.7.3  1.1.2.2  1.1.4.0  1.1.4.1  1.1.5.3  1.2.3.3  1.2.4.2  1.2.5.1  1.2.5.3  2.1.1.0  2.1.2.1  2.1.6.2  2.2.3.1
data/hrrr_alaska_20251114_05.zarr/gust/: 0.0.3.3  0.0.5.2  0.0.6.1  0.0.6.3  0.0.7.3  0.1.2.1  0.1.5.2  0.2.1.2  0.2.2.3  0.2.7.1  (+12 more)
data/hrrr_alaska_20251114_09.zarr/: .zmetadata
data/hrrr_alaska_20251114_21.zarr/: .zmetadata
data/hrrr_alaska_20251116_12.zarr/: .zmetadata
data/hrrr_alaska_20251117_12.zarr/: .zmetadata
data/hrrr_alaska_20251120_00.zarr/: .zattrs
data/noaa-hrrr-alaska-forecast.zarr/: .zmetadata
data_summary/: README.md  size.txt  structure.txt
scripts/: generate_catalog.py
src/ak_hrrr_to_zarr/: __init__.py  __main__.py
tests/: __init__.py  test_template_config.py
(+7875 files in other folders)
