[project]
name = "ak-hrrr-to-zarr"
version = "0.1.0"
description = "Reformat Alaska HRRR weather datasets into Zarr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "xarray>=2024.1.0",
    "zarr>=3.0.0",
    "dask>=2024.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "cfgrib>=0.9.10",
    "rioxarray>=0.15.0",
    "s3fs>=2024.1.0",
    "fsspec>=2024.1.0",
    "numcodecs>=0.12.0",
    "pyproj>=3.6.0",
    "pydantic>=2.6.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "ANN",    # flake8-annotations
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PL",     # pylint
    "PERF",   # perflint
    "RUF",    # ruff-specific rules
    "NPY",    # numpy-specific rules
]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "rasterio.*",
    "rioxarray.*",
    "numcodecs.*",
    "s3fs.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.scripts]
ak-hrrr = "ak_hrrr_to_zarr.__main__:app"
